# Koin

./: CLAUDE.md  README.md  compute.js  index.html  main.js  package-lock.json  package.json  style.css  validation.js  vite.config.js  vitest.config.js
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: compute.test.js  validation.test.js
tests/dom/: modal.test.js
